examples/conformance/invalid/invalid_item_kind_unknown.flo
spec_version: "0.1"

process:
  id: invalid_item_kind_unknown
  name: Invalid Item Kind Unknown

items:
  - id: package
    name: Package
    kind: thing

steps:
  - id: start
    kind: start

  - id: pack
    kind: task

  - id: end
    kind: end

transitions:
  - source: start
    target: pack
  - source: pack
    target: end
